Form section float clearing (for correct spacing after sections)

--- a/styles/form/form.less
+++ b/styles/form/form.less
@@ -67,6 +67,7 @@ span.pkp_form_error {
 	div.section {
 		clear: left;
 		margin-bottom: 10px;
+		overflow: hidden;
 	}
 
 	label {
@@ -130,7 +131,7 @@ span.pkp_form_error {
 	.inline {
 		float: left;
 		clear: none !important;
-		margin-right: 2%;
+		padding-right: 2%;
 		margin-bottom: 0;
 	}
 
